# compoundv2-substreams

./: .gitignore  Cargo.toml  README.md  build.rs  snapshot.txt  substreams.yaml
abi/: comptroller.json
proto/: compound.proto
src/: lib.rs  rpc.rs  utils.rs
src/abi/: comptroller.rs  ctoken.rs  mod.rs
src/pb/: compound.v1.rs
