[package]
name = "compoundv2-substreams"
version = "0.1.0"
description = "Ongoing effort to index Compound V2 using substreams"
edition = "2021"
repository = "https://github.com/0xbe1/compoundv2-substreams"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex-literal = "0.3.4"
prost = "0.10.1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
# Use latest from https://crates.io/crates/substreams
substreams = "0.0.11"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.1.4"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.1.4"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"